# rotalabs-redqueen

./: .gitignore  .secrets.env.example  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: getting-started.md  index.md
docs/api/core/: archive.md  coevolution.md  evolution.md  fitness.md  genome.md  index.md  population.md  report.md  rng.md  selection.md  stimulus.md
docs/api/llm/: defense.md  fitness.md  genome.md  index.md  judges.md  mcp.md  targets.md
src/rotalabs_redqueen/: __init__.py  _gen_conformance.py  cli.py  conformance.py
src/rotalabs_redqueen/core/: __init__.py  archive.py  canonical.py  coevolution.py  evolution.py  fitness.py  genome.py  population.py  report.py  rng.py  selection.py  stimulus.py  taxonomy.py
src/rotalabs_redqueen/llm/: __init__.py  defense.py  fitness.py  genome.py  judge.py  mcp.py  targets.py
tests/: __init__.py  mcp_mock_server.py  prng_vectors.json  test_conformance.py  test_core.py  test_determinism.py  test_llm.py  test_mcp.py  test_persistence.py  test_prng.py  test_providers.py  test_report.py
tests/conformance/: L1.json  L2.json  L3.json  L4_agentic.json  L4_multiturn.json  L5_coevolution.json
tests/fixtures/providers/: anthropic_messages.json  gemini_generate.json  openai_chat.json
